Fix: fixed bug with lazy loading on mobile  Improve: created and configured adaptive MessageItem component

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -5141,4 +5141,8 @@ footer {
     background-color: $gray-4;
     color: #FFF;
   }
+
+  @media all and (min-width: 991px) {
+    display: none;
+  }
 }
